--- a/projects/storefront/src/app/app.component.html
+++ b/projects/storefront/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-header></app-header>
+<app-header
+[variant]="getHeaderVariant()">
+</app-header>
 
 <main style="overflow-x: hidden;">
   <router-outlet></router-outlet>
