--- a/projects/storefront/src/app/shared/components/featured-category-card/featured-category-card.component.html
+++ b/projects/storefront/src/app/shared/components/featured-category-card/featured-category-card.component.html
@@ -1,24 +1,16 @@
-<a
-  [routerLink]="href"
-  [attr.aria-label]="altText"
-  tabindex="0"
-  class="featured-category-card"
->
-  <img
-    [src]="category.imageUrl || 'assets/images/placeholder-image.webp'"
-    [alt]="altText"
-    class="card-image"
-    width="320"
-    height="220"
-    draggable="false"
-    aria-hidden="true"
-  />
-  <span aria-hidden="true" class="blur-overlay"></span>
-  <span aria-hidden="true" class="gradient-overlay"></span>
-  <span class="name-container" aria-hidden="true">
-    <span class="name-text">
+<a [routerLink]="href" [attr.aria-label]="altText" tabindex="0" class="category-card group">
+  <div class="image-container">
+    <img
+      [src]="category.imageUrl || 'assets/images/placeholder-image.webp'"
+      [alt]="altText"
+      class="category-image"
+      draggable="false"
+    />
+  </div>
+
+  <div class="content-area">
+    <span class="category-name">
       {{ category.name }}
     </span>
-  </span>
-  <span class="sr-only">{{ category.name }}</span>
+  </div>
 </a>
